--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,15 @@
 # Site settings
-name: Less Or More
-email: luoyan35714@126.com
+name: Shark
+email: sha4yu0119@gmail.com
 author: Freud Kang
 url: http://www.hifreud.com
 resume_site: http://www.hifreud.com/Resume.io/
-github: https://github.com/luoyan35714/
-baseurl: "/LessOrMore"
-description: Actually, less is more!
-meta_description: 康志华;个人博客;学而不思则罔;思而不学则殆;生命不止;折腾不休
-motto: It's our wits that make us men.
-banner: 学而不思则罔，思而不学则殆。
+github: https://github.com/shark0119/
+baseurl: ""
+description: Find Yourself
+meta_description: Find Yourself
+motto: Falling down from the TRUMP building
+banner: Find Yourself
 
 #permalink: /:categories/:year/:month/:day/:title/
 permalink: /:year/:month/:day/:title/
@@ -17,7 +17,7 @@ paginate: 10
 
 exclude: ['README.md', 'Gemfile.lock', 'Gemfile', 'Rakefile']
 
-github_username: luoyan35714
+github_username: shark0119
 
 # Build settings
 markdown: kramdown
