--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ author: Freud Kang
 url: http://www.hifreud.com
 resume_site: http://www.hifreud.com/Resume.io/
 github: https://github.com/shark0119/
-baseurl: ""
+baseurl: "/"
 description: Find Yourself
 meta_description: Find Yourself
 motto: Falling down from the TRUMP building
